removed text align and replaced with box class, centered everything with boxpage class, colored background cyan with backgroundpage, textbox created a rounded purple border with orange background, textbox overlap over border fixed with listbox, and centered image with centerimage

--- a/recipes/recipestyle.css
+++ b/recipes/recipestyle.css
@@ -1,3 +1,19 @@
-.aligntext{
-    text-align: center;
+.boxpage{
+    width: 400px;
+    padding: 0px 0px 0px 350px;
+}
+.backgroundpage{
+    background-color: aqua;
+}
+.textbox{
+    border: 15px solid rebeccapurple;
+    border-radius: 50px;
+    padding: 10px 10px 10px 10px;
+    background-color: orange;
+}
+.listbox{
+    padding-left: 30px;
+}
+.centerimage{
+    padding-left: 70px;
 }
